# flutter_silero_vad

./: LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/flutter_silero_vad/: FlutterSileroVadPlugin.kt  VadItarator.kt  VadItaratorV4.kt  VadIterator.kt  VadIteratorV5.kt
example/: README.md  analysis_options.yaml  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_silero_vad_example/: MainActivity.kt  VadIterator.kt  a.kt
example/assets/: silero_vad_int32.onnx
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: app.dart  main.dart
example/lib/pages/: components.dart  home.dart
example/lib/providers/: audio.dart  recorder.dart
example/lib/services/: audio.dart  recorder.dart
ios/: flutter_silero_vad.podspec
ios/Classes/: FlutterSileroVadPlugin.swift  VadItarator.swift  VadItaratorV4.swift  VadItaratorV5.swift
lib/: flutter_silero_vad.dart  flutter_silero_vad_method_channel.dart  flutter_silero_vad_platform_interface.dart  generated_bindings.dart
src/: CMakeLists.txt  vad_interface.h  vad_iterator.cpp  vad_iterator.h  vad_library.cpp
src/onnxruntime-mobile-1.13.1/: AndroidManifest.xml
